# EquiRise

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/deal_pool/: Cargo.toml
contracts/deal_pool/src/: lib.rs  tests.rs
contracts/syndicate_manager/: Cargo.toml
contracts/syndicate_manager/src/: lib.rs  tests.rs
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/activity/: page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/api/approve-lead/: route.ts
frontend/src/app/api/setup-usdc/: route.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/transactions/: page.tsx
frontend/src/components/: Navbar.tsx  Providers.tsx  Sidebar.tsx  WalletModal.tsx
frontend/src/services/: contracts.ts  events.ts  stellar.ts  wallet.ts
frontend/src/state/: useAppStore.ts
frontend/src/tests/: frontend.test.tsx  integration.test.tsx
scripts/: deploy.ts  setup_testnet.ts
