[workspace]
resolver = "2"
members = [
    "syndicate_manager",
    "deal_pool",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
debug-assertions = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[patch.crates-io]
soroban-env-host = { git = "https://github.com/stellar/rs-soroban-env.git", tag = "v22.0.11" }
soroban-env-common = { git = "https://github.com/stellar/rs-soroban-env.git", tag = "v22.0.11" }
soroban-sdk = { git = "https://github.com/stellar/rs-soroban-sdk.git", tag = "v22.0.11" }

