[package]
name = "syndicate_manager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.1" }
soroban-env-host = "=22.1.3"
ed25519-dalek = "=2.2.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils"] }
